--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                      <span>It tells the story of Naruto Uzumaki, a young ninja who seeks recognition from his peers and dreams of becoming the Hokage, the leader of his village. </span>
                  </div>
                  <div>
-                  <video src="naruto.mp4" autoplay loop muted ></video>
+                  <video src="naruto1.mp4" autoplay loop muted ></video>
                  </div>
              </section>
 
