--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                      <span style="font-weight: bolder;">Naruto</span>
                      <span>It tells the story of Naruto Uzumaki, a young ninja who seeks recognition from his peers and dreams of becoming the Hokage, the leader of his village. </span>
                  </div>
-                 <div>
-                  <video width="300px" src="naruto1.mp4" autoplay loop muted ></video>
+                 <div id="naruto1">
+                  <videosrc="naruto1.mp4" autoplay loop muted ></video>
                  </div>
              </section>
 
